# property-matchmaker

./: .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt  run_gemini.ipynb
Archived/: README.md  pyproject.toml  requirements.txt  streamlitApp.py
Archived/data/: Central7_DB_20260218.xlsx
Archived/modelling/: function_gemini.py
data/: README.md
modelling/: function_gemini.py
scripts/: download_epc_data.py  download_hmlr_data.py
src/: __init__.py  auth.py  copilot.py  db.py  ingest.py  webapp.py
web/: base.html  chat.html  dashboard.html  login.html  records.html  register.html
web/static/: property-results-renderer.js
web/static/css/: main.css
