[project]
name = "property-matchmaker"
version = "0.1.0"
description = ""
authors = [
    {name = "gouthaman87@gmail.com"}
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "openai (>=2.21.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.10,<2.0.0)",
    "langchain-experimental (>=0.4.1,<0.5.0)",
    "langchain-google-genai (>=4.2.1,<5.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
