[tool.poetry]
name = "property-matchmaker"
version = "0.1.0"
description = ""
authors = ["Gouthaman <gouthaman87@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
openai = "^2.21.0"
openpyxl = "^3.1.5"
langchain = "^1.2.10"
langchain-community = "^0.4.1"
langchain-openai = "^1.1.10"
langchain-experimental = "^0.4.1"
langchain-google-genai = "^4.2.1"
tabulate = "^0.9.0"
langchain-groq = "^1.1.2"
uvicorn = "^0.41.0"
fastapi = "^0.132.0"
pydantic = "^2.12.5"
streamlit = "^1.54.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
